feat: Ampliado os campos de user e corrigido validações
